--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "dom": "0.0.3",
+    "firebase": "^10.3.0",
     "framer-motion": "^10.12.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
